# ClockrApi

./: db.sqlite3  pyproject.toml  render.yaml  requirements.txt
app/: Serializer.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
backend/: settings.py
