[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Adonias Gebre <adisney365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref=="^3.7.2"
Django=="^5.0"
django-cors-headers=="^4.3.1"
djangorestframework=="^3.14.0"
gunicorn=="^21.2.0"
packaging=="^23.2"
sqlparse=="^0.4.4"
tzdata=="^2023.3"
xlwt=="^1.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
